# charter

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  rust-toolchain
.github/workflows/: ci.yml
docs/: architecture.md
src/: cache.rs  cli.rs  deps.rs  detect.rs  external.rs  extract.rs  git.rs  index.rs  lib.rs  main.rs  output.rs  pipeline.rs  query.rs  serve.rs  session.rs  tests.rs
src/cache/: types.rs
src/extract/: attributes.rs  calls.rs  complexity.rs  errors.rs  imports.rs  language.rs  safety.rs  symbols.rs
src/output/: calls.rs  clusters.rs  dataflow.rs  dependents.rs  errors.rs  hotspots.rs  manifest.rs  overview.rs  preamble.rs  refs.rs  safety.rs  skipped.rs  snippets.rs  symbols.rs  type_map.rs
src/pipeline/: parse.rs  read.rs  walk.rs
src/pipeline/parse/: python.rs  rust.rs
tests/: integration.rs  nightshade_eval.rs
tests/fixtures/cache_test/: Cargo.toml
tests/fixtures/cache_test/src/: lib.rs  mutable.rs  stable.rs
tests/fixtures/impl_blocks/: Cargo.toml
tests/fixtures/impl_blocks/src/: entity.rs  lib.rs  render.rs  serialize.rs
tests/fixtures/malformed/src/: broken.rs  valid.rs
tests/fixtures/mixed_project/: Cargo.toml  pyproject.toml
tests/fixtures/mixed_project/python/: bindings.py
tests/fixtures/mixed_project/src/: lib.rs
tests/fixtures/nested_workspace/: Cargo.toml
tests/fixtures/nested_workspace/src/: lib.rs
tests/fixtures/simple_python/: pyproject.toml
tests/fixtures/simple_python/src/mypackage/: __init__.py  cli.py  dangerous.py  errors.py  gui.py  models.py  protocols.py  repositories.py  services.py
tests/fixtures/simple_python/src/mypackage/utils/: __init__.py  helpers.py  validators.py
tests/fixtures/simple_python/tests/: conftest.py  test_models.py  test_services.py
(+5 files in other folders)
