[package]
name = "charter"
version = "0.1.0"
edition = "2024"
description = "Fast structural context generator for codebases"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
homepage = "https://github.com/matthewjberger/charter"
repository = "https://github.com/matthewjberger/charter"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
keywords = ["rust", "ast", "parser", "llm", "context"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
tokio = { version = "1.43", features = ["full"] }
ignore = "0.4"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
blake3 = "1.5"
indicatif = "0.17"
memmap2 = "0.9"
memchr = "2.7"
similar = "2.6"
smallvec = { version = "1.13", features = ["serde"] }
anyhow = "1.0"
num_cpus = "1.16"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
