[project]
name = "mypackage"
version = "1.0.0"
description = "Test package for charter Python support"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
mypackage-cli = "mypackage.cli:main"

[project.gui-scripts]
mypackage-gui = "mypackage.gui:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
